# propfarm

./: .gitignore  Pipfile  propfarm.Rproj  pyproject.toml  requirements.txt
archive/: Pipfile
scripts/: ActNetScraper.ipynb  MLBscratch.ipynb  NBAdbupdate.R  NBApropfarming.R  NBAresearchprints.R  NBArotowireIDscrape.ipynb  WNBAdbupdate.R  WNBApropfarming.R  actNetScraper.py  distanceTraveledCalculator.R  linescraper.ipynb  nbaAPI.ipynb  nbaScrape.ipynb  nbaScraper.py  propfarming.R  rotowireIDscrape.ipynb
scripts/functions/: MLBdatacrackers.R  NBAdatacrackers.R  NBAdbhelpers.R  NBAdbupdate.R  NBAdbupdate_players.R  NFLdbupdate.R  WNBAdbhelpers.R  datacrackers.R  dbhelpers.R  distanceTraveledCalculator.R
scripts/models/: nbaPlayerStatModeling.py  scratch.ipynb  test.xlsx
scripts/reporting/: NBAoppRanksReport.Rmd  NBArenderOppRanksReports.R  NBAresearchprints.R  NBAshotCharts.R  NBAshotCharts.py
scripts/scrapers/: actNetApi.py  actNetScraper.py  nbApi.py  nbaScrape.ipynb  nbaScraper.py
